# lengthy

./: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
lambda/: .gitignore  Cargo.toml  README.md
lambda/src/: http_handler.rs
lib/: cdk-stack.ts
website/: index.html  package-lock.json  package.json
website/src/: App.css  App.tsx
