[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
aws-config = "1.5.13"
aws-sdk-dynamodb = "1.59.0"
base64 = "0.22.1"
blake3 = "1.5.5"
infer = "0.16.0"
lambda_http = "0.13.0"
percent-encoding = "2.3.1"
rand = "0.8.5"

tokio = { version = "1", features = ["macros"] }
url = "2.5.4"
